Bug fixes
- Added max size for text area (so can't extend too far)
- Made T&C's a requirement

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,8 @@ textarea {
   min-height: 60px;
   min-width: 300px;
   color: grey;
+  max-width: 500px;
+  max-height: 100px;
 }
 
 input {
